--- a/appendices/conversion/index.html
+++ b/appendices/conversion/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>Adventure Conversion | 地城世界 HTML SRD</title>
+  <title>冒險模組轉換 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -91,7 +91,7 @@
      <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">附錄 <b class="caret"></b></a>
         <ul class="dropdown-menu">
-           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/conversion">轉換冒險</a></li>
+           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/conversion">冒險模組轉換</a></li>
            <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/teaching">進行教學</a></li>
            <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/npcs">NPCs</a></li>
         </ul>
@@ -112,24 +112,35 @@
        <div class="row">
           <div class="col-md-8 col-md-offset-1">
              
-<h1>Adventure Conversion</h1>
-<p class="NoIndent">There isn’t always time for prep. People aren’t entirely committed to a game—you just want to test it out or you’ve got a four-hour slot at a convention that you want to fill and you’ve never met the players before in your life. Maybe prep isn’t something you care about or you think it’s more fun to just take a map and run with it. Even better, maybe you’ve got a favorite old school adventure module and you’d love to run through using the Dungeon World rules. In this appendix, we’ll cover how to convert and adapt material from other games into Dungeon World and give you the same flexibility to run your favorite adventures using the rules in this book.</p>
-<h2>Overview</h2>
-<p class="NoIndent">The first step in preparing an adventure for use with Dungeon World is reading through that adventure, and through the Dungeon World rules. For this book, you’ll want to be familiar with all the basic rules, as well as familiar with the section on fronts and on the GM principles. The former will be guiding you in adapting the framework of the adventure and the latter will help keep your mind going in the right direction—so that gameplay stays true to the style and rules set out in this book. You’ll want to read through the module next, paying close attention to the four following topics as you go.</p>
-<ul><li>Maps</li>
-<li>Monsters</li>
-<li>Magic Items</li>
-<li>NPCs and Organizations</li></ul>
-<p>Flip through the adventure, make some notes as you go, but don’t feel you need to memorize the whole thing. Areas that focus particularly on statistics are likely to end up ignored, and you’ll want to leave blanks in the adventure for you and the players to discover as you go.</p>
-<p>When you’ve finished, you’ll have a broad understanding about what the adventure is about—the power groups at play in it, the special or cool monsters the adventure contains, the threats and dangers that its cast present to the world and the kinds of things the PCs might be interested in. Set aside the adventure for now, and refer to the fronts section of Dungeon World. This is where the majority of your work is going to take place.</p>
-<h2>Fronts</h2>
+<h1>冒險模組轉換</h1>
+<p class="NoIndent">
+	你並非總是會有時間做準備。可能你們尚未完全投入這個遊戲──你們只是想嘗試一下、又或者你們剛好在一場TRPG的大型集會中有段想填滿的四小時空檔，但你卻從未見過你面前的這群玩家。也許你並不怎麼注重事前準備，或者你覺得直接拿現成的地圖來遊玩會更加有趣，或更進一步，你手上有一個你最愛的老派冒險模組，且你興致勃勃地打算使用地城世界的規則來主持它。在這個附錄章節中，我們將介紹如何把其他遊戲系統的要素轉換並調整到地城世界中，並讓你能夠使用本站的規則，保留相同的彈性與自由度來運行你最喜愛的冒險模組。</p>
+<hr/>
+
+<h2>總覽</h2>
+<p class="NoIndent">
+	要使用地城世界的規則來準備一場冒險模組，首先，你必須仔細閱讀該冒險模組以及地城世界的規則。就地城世界的規則來說，你會需要盡可能熟悉所有的基本規則、以及關於「前置」和「GM原則」的章節。前者將引導你調適冒險模組的框架，而後者將能幫助你專注在正確的方向上──從而使遊戲維持於符合這本書列出的風格和規則。你接著需要仔細閱讀冒險模組，並在這過程中特別留意以下四個主題。</p>
+<ul>
+	<li>地圖</li>
+	<li>怪物</li>
+	<li>魔法物品</li>
+	<li>NPC和組織</li></ul>
+<p>
+	翻閱冒險模組，在過程中做些筆記，但不要覺得你需要記住所有事情。特別著重在數據資料的段落最後通常都會被忽略，而你也會希望在冒險中留下一些空間讓你和玩家們在遊玩過程中進一步發掘。</p>
+<p>
+	當你完成上述準備，你將會對整個冒險故事有一個廣泛的瞭解：參與其中的勢力團體、冒險中出現的特別或帥氣怪物、存在於這個世界上的威脅和危害、以及一些玩家角色們可能會感興趣的事物。現在，先把冒險模組放到一邊，並參照地城世界的前置章節：這會是你開始大部分準備的橋段。</p>
+<hr/>
+
+<h2>前置 (Fronts)</h2>
 <p class="NoIndent">The core of any standard adventure, scenario or game session in Dungeon World flows outward from the fronts to the players; the fronts have their impending dooms, the players react, and in the space between, you play the game to find out what happens. The same is true when presenting a converted adventure. Reading through the module, you’ll have noticed things—NPCs, places of interest, special monsters and organizations that might have an impact on the world or some agenda to carry out. Depending on the size of the adventure, there may be just one or a few of these. Take a look through the list of front types and create one for each group.</p>
 <p class="Example">I’m going to convert an old adventure I love; I’ve run it a dozen times in a bunch of different systems and I think it’d be a blast to run my Dungeon World group through. I’ve given myself a quick read through to remind myself what the adventure is all about. In this case, there’s a town being menaced in secret by a wicked cult who worships a squamous reptile god. Sounds like fun! The adventure has a secret dungeon, a corrupt religious order, a bunch of smelly troglodytes and, because the whole town is a mess of suspicion and finger-pointing, some very helpless adventurers. It’s a pretty grim start with lots of bad things to choose from. I’ve decided that all that bad stuff falls under two main fronts: The Cultists and The Troglodyte Clan.</p>
 <p class="Example">Now, I could make the sorcerous naga that lives in the caverns her own front, if I wanted to, or I could add in a campaign front for the Reptile God itself, but I think I’ll only be running this game a few sessions, so I’m going to stay focused. The two fronts I have work together in some ways, but are unique and operate independently, so I’ve separated them.</p>
 <p class="NoIndent">Create these fronts like you would normally, choosing dangers, impending dooms, and grim portents. Ask one or two stakes questions but be sure to leave yourself lots of room—that’s where you can really tie in the characters. Normally, you’d be pulling these things straight out of the inspiration of your brain, but in this case, you’ve got the module to guide you. Think about the fronts as themes, and the dangers as elements from the pages of your module. Look at the kinds of things your fronts are said to be doing in the adventure and how that might go if the PCs were never there to stop it. What’s the worst that could happen if the fronts were able to run rampant? This kind of reading-between-the-lines will give you ammunition for making your hard moves as you play through the adventure. This step is where you’ll turn those stat-block NPCs into either full-fledged dangers themselves, or members of the front’s cast.</p>
 <p>If there are any traps, curses or general effects in the adventure you’d like to write custom moves for, do it now. A lot of old adventures will have elements that call for a “saving throw” to avoid some noisome effect—these can often simply be a cause for a defy danger roll, or can have whole, separate custom moves if necessary. The key here is to capture the intent of the adventure—the spirit of the thing—rather than translate some mechanical element perfectly.</p>
 <p>When you’re done, you’ll have a set of fronts that cover the major threats and dangers the characters will face.</p>
-<h2>Monsters</h2>
+<hr/>
+
+<h2>怪物 (Monsters)</h2>
 <p class="NoIndent">Most published adventures contained one or two unique monsters not seen anywhere else—custom creatures and denizens of the deeps that could threaten players in some way they hadn’t encountered before. Take a look through the adventure and make sure you’ve caught them all. Many monsters will already have statistics noted in Dungeon World and you can, if you’re happy with them, just make a note of what page they’re on in your fronts and move on from there. If you want to further customize the monsters, or need to create your own, use the rules to do so. In this step, try to avoid thinking about “balancing” the monsters or concerning yourself too much with how many HP a monster has or whether its armor rating matches what you expect. Think more about how the monster is meant to participate in the world. Does it scare off hopeless adventurers? Is it there to bar their way or pose a riddle? What is its purpose in the greater ecology of the dungeon or adventure at large? Translating the spirit of the thing will always give you better, more engaging results. If the monster has a cool power or neat trick you want to write a custom move for, do so! Custom moves are what make Dungeon World feel unique from group to group, so take advantage of them where you can.</p>
 <p class="Example">In my adventure, the monsters run the gamut. I’ve got a scary naga with some mind-controlling powers, an evil priest with divine snake-god magic, a bunch of ruffian cultists, a dragon turtle and a few miscellaneous lizards, crocodiles and snakes. Most of these I can pull from the monster settings, but I’ll create custom stats for the naga and the cultist leader, at least. I want them to feel new and different and have some cool ideas for how that might look. I use the monster creation rules to put them together.</p>
 <h3>Direct Conversion</h3>
@@ -142,13 +153,19 @@
 <p class="NoIndent">If the monster’s AC is average give it 1 armor. If the monster’s AC is low, give it 0 armor. If the monster’s AC is high give it 2 armor, 3 armor for beasts that are all about defense. If it’s nearly invulnerable, 4 armor. +1 armor if its defenses are magical.</p>
 <h4>Moves and Instinct</h4>
 <p class="NoIndent">Look at the special abilities or attacks listed for the monster, these form the basis for its moves.</p>
-<h2>Maps</h2>
+<hr/>
+
+<h2>地圖 (Maps)</h2>
 <p class="NoIndent">One of the biggest differences between Dungeon World and many other fantasy RPGs is the concept of maps and mapping. In many games, you’ll see a square-by-square map denoting precisely what goes where, often presented to give as much detail as possible and leave little to the imagination save the description of the location in question. Dungeon World often leans the opposite direction—maps marked with empty space and a one or two word description like “blades” or “scary.” To adapt an existing adventure for use in Dungeon World, simply keep in mind your principles and agenda. Primarily, keep in mind that as the GM, it’s your job to “draw maps, leave blanks” and to “ask questions and use the answers.”</p>
 <p>To that end, it’s often best to re-draw the map entirely, if you have time. Don’t copy it inch-by-inch but redraw it freehand, leaving spaces and drawing out new rooms, if you’d like. Don’t stick to the map exactly as written, but give yourself some creative license. The idea here is to give yourself room to expand—to allow the players’ reaction to the adventure to surprise and inspire you. If you’ve got the whole map nailed down in advance, there’s nowhere to go you don’t already know about, is there? Pick a few rooms that don’t interest you and wipe out their inhabitants. Draw a new tunnel or two. This will give you some space to play around once you get into the game itself.</p>
 <p>If you don’t have the time or inclination to re-draw the map, don’t worry. Just take the original map, make a few notes about what might go where and leave the rest blank. When the players go into that room marked “4f” don’t look it up, just make a guess at what might be there based on your notes and what else has been happening. You’ll find a comfortable balance between freely playing out what happens and consulting your prep as you go along.</p>
 <p class="Example">The maps that come with my adventure are a good mix of fun and cool and sort of boring fluff. I’ll keep most of what the dungeon describes under the city—the lair of the troglodytes and the secret caves where the captive villagers are being kept—but I’m going to throw away a lot of the stuff about the village itself and just leave blank spaces. It’ll give me room to use the answers to questions like “Who do you already know, here?” and “Who lives in the abandoned hut up the road?” I’ve made some notes about where the map and my fronts intersect, but mostly I’ve just given myself room to explore.</p>
-<h2>Magic &amp; Treasure</h2>
+<hr/>
+
+<h2>魔法&amp;財寶 (Magic &amp; Treasure)</h2>
 <p class="NoIndent">Two things that are, traditionally, a “big deal” in published modules are treasure and magic items. This is less relevant in Dungeon World (as the reward cycle for characters is more about “doing” than about “having”) but it’s still fun to drudge through a dungeon or explore lost ruins and come up with cool magic items and piles of gold! Like the map, it’s useful to get an idea of the kinds of stuff that might be found in the adventure—anything particularly called out in the text as relevant to the adventure itself (a magic sword that can be used to wound the golem on level 4, or a pendant belonging to the prince captured in room 3) is particularly important. Like monsters, it’s better to look at magic items in terms of what purpose they fulfill: what they’re “for” rather than the damage or armor bonus they might give. Dungeon World isn’t built on balancing treasure against character level, for example, so just look through the adventure for items that seem cool or fun or interesting and create new magic items (with custom moves as necessary) wherever you think it’s needed. This is possibly the easiest step of conversion. Again, you can leave yourself exploratory room, here. Make notes to yourself like “The wizard has a magic staff, what does it do?” and find that out in play. Ask the players about it, see what they have to say. Let spout lore do some work for you. “You’ve heard that the wizard here has a strange magical staff. What rumors have you heard of its origins?”</p>
+<hr/>
+
 <h2>Introductory Moves</h2>
 <p class="NoIndent">This step is entirely optional, but can be really useful when running through an adventure for a convention group or other group where running through a full “first session” process just isn’t possible. You can take variables of the adventure and create “hooks” for that adventure, writing custom moves to be made after character creation but before play starts. These moves will serve to engage the characters in the fiction and give them something special to prepare them or hook them into what’s about to happen. You can write one for each class, or bundle them together, if you like. Here’s an example:</p>
 <p class="Example">Fighter, someone who loves you gave you a gift before you left for a life of adventure. Roll+CHA and tell us how much they love you. On a 10+ pick two heirlooms, on a 7-9 pick one. On a miss, well, good intentions count for something, right?</p>
