--- a/gm/first_session/index.html
+++ b/gm/first_session/index.html
@@ -91,7 +91,7 @@
      <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">附錄 <b class="caret"></b></a>
         <ul class="dropdown-menu">
-           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/conversion">轉換冒險</a></li>
+           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/conversion">冒險模組轉換</a></li>
            <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/teaching">進行教學</a></li>
            <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/npcs">NPCs</a></li>
         </ul>
