--- a/monsters/planes/index.html
+++ b/monsters/planes/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>Planar Powers | 地城世界 HTML SRD</title>
+  <title>位面勢力 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -91,7 +91,7 @@
      <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">附錄 <b class="caret"></b></a>
         <ul class="dropdown-menu">
-           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/conversion">轉換冒險</a></li>
+           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/conversion">冒險模組轉換</a></li>
            <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/teaching">進行教學</a></li>
            <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/npcs">NPCs</a></li>
         </ul>
@@ -112,96 +112,96 @@
        <div class="row">
           <div class="col-md-8 col-md-offset-1">
              
-<h1>Planar Powers</h1>
-<h3 class="MonsterName">天使 (Angel)	<span class="Tags">Solitary, Terrifying, Divine, Intelligent, Organized</span></h3>
-<p class="MonsterStats">Sword of Flames (b[2d10]+4 damage, ignores armor), 18 HP, 4 Armor</p>
-<p class="MonsterStats"><span class="Tags">Close, Forceful</span></p>
-<p class="MonsterQualities"><strong>Special Qualities:</strong> Wings</p>
+<h1>位面勢力</h1>
+<h3 class="MonsterName">天使 (Angel)	<span class="Tags">單獨, 駭人, 神聖, 聰穎, 組織</span></h3>
+<p class="MonsterStats">Sword of Flames (b[2d10]+4 傷害, 無視護甲), 18 HP, 4 護甲</p>
+<p class="MonsterStats"><span class="Tags">近身, 強力</span></p>
+<p class="MonsterQualities"><strong>特性:</strong> Wings</p>
 <p class="MonsterDescription">“So was it written that the heavens opened up to Avra’hal and did an angel from the clouds emerge to speak unto her and so did it appear to her as her firstborn daughter—beautiful, of ebon skin and golden eyes—and did Avra’hal weep to see it. ‘Be not afraid,’ it commanded her. ‘Go to the villages I have shown you in your dreams and unto them show the word I have written on your soul.’ Avra’hal wept and wept and did agree to do this and did take up her sword and tome and did into the villages go, a great thirst for blood on her lips for the word the angel wrote upon the soul of Avra’hal was ‘kill’.” <em>Instinct</em>: To share divine will</p>
 <ul><li>Deliver visions and prophecy</li>
 <li>Stir mortals to action</li>
 <li>Expose sin and injustice</li></ul>
-<h3 class="MonsterName">猬魔 (Barbed Devil)	<span class="Tags">Solitary, Large, Planar, Terrifying</span></h3>
-<p class="MonsterStats">Spines (d10+3 damage, 3 piercing), 16 HP, 3 Armor</p>
-<p class="MonsterStats"><span class="Tags">Close, Reach, Messy</span></p>
-<p class="MonsterQualities"><strong>Special Qualities:</strong> Spines</p>
+<h3 class="MonsterName">猬魔 (Barbed Devil)	<span class="Tags">單獨, 大型, 異位面, 駭人</span></h3>
+<p class="MonsterStats">Spines (d10+3 傷害, 3 穿透), 16 HP, 3 護甲</p>
+<p class="MonsterStats"><span class="Tags">近身, 及遠, 毀亂</span></p>
+<p class="MonsterQualities"><strong>特性:</strong> Spines</p>
 <p class="MonsterDescription">There are a thousand forms of devil, maybe more. Some common and some unique. Each time the Inquisitors discover a new one they write it into the Tormentors Codex and the knowledge is shared among the abbeys in the hope that atrocities of that particular sort won’t find their way into the world again. The barbed devil has long been known to the brothers and sisters of the Inquisition. It appears only at a site of great violence or when called by a wayward summoner. Covered in sharp quills, this particular demon revels in the spilling of blood, preferably by impaling victims piecemeal or in whole upon its thorns and letting them die there. Cruel but not particularly effective beyond slaughter. A low inquisitorial priority. <em>Instinct</em>: To rend flesh and spill blood</p>
 <ul><li>Impale someone</li>
 <li>Kill indiscriminately</li></ul>
-<h3 class="MonsterName">鏈魔 (Chain Devil)	<span class="Tags">Solitary, Planar</span></h3>
-<p class="MonsterStats">Crush (d10 damage, ignores armor), 12 HP, 3 Armor</p>
-<p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
+<h3 class="MonsterName">鏈魔 (Chain Devil)	<span class="Tags">單獨, 異位面</span></h3>
+<p class="MonsterStats">Crush (d10 傷害, 無視護甲), 12 HP, 3 護甲</p>
+<p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterDescription">Do you think the phrase “drag him to hell” means nothing? It is unfortunately literal, in the case of the chain devil. Appearing differently to each victim, this summoned creature has but a single purpose: to wrap its victim up in binding coils and take it away to a place of torment. Sometimes it will come as a man-shaped mass of rusting iron, hooks and coils of mismatched links. Other times, a roiling tangle of rope or kelp or twisted bloody bedsheets. The results are always the same. <em>Instinct</em>: To capture</p>
 <ul><li>Take a captive</li>
 <li>Return to whence it came</li>
 <li>Torture with glee</li></ul>
-<h3 class="MonsterName">概念元素 (Concept Elemental)	<span class="Tags">Solitary, Devious, Planar, Amorphous</span></h3>
-<p class="MonsterQualities"><strong>Special Qualities:</strong> Ideal form</p>
+<h3 class="MonsterName">概念元素 (Concept Elemental)	<span class="Tags">單獨, 狡猾, 異位面, 不定型</span></h3>
+<p class="MonsterQualities"><strong>特性:</strong> Ideal form</p>
 <p class="MonsterDescription">The planes are not as literal as our world. Clothed in the elemental chaos are places of stranger stuff than air and water. Here, rivers of time crash upon shores of crystal fear. Bleak storms of nightmare roil and churn in a laughter-bright sky. Sometimes, the spirits of these places can be lured into our world, though they are infinitely more unpredictable and strange than mere fire or earth might be. Easier to make mistakes, too—one might try calling up a wealth elemental and be surprised to find a murder elemental instead. <em>Instinct</em>: To perfect its concept</p>
 <ul><li>Demonstrate its concept in its purest form</li></ul>
-<h3 class="MonsterName">腐化者 (Corrupter)	<span class="Tags">Solitary, Devious, Planar, Hoarder</span></h3>
-<p class="MonsterStats">Secret dagger (w[2d8] damage), 12 HP, 0 Armor</p>
-<p class="MonsterStats"><span class="Tags">Close</span></p>
+<h3 class="MonsterName">腐化者 (Corrupter)	<span class="Tags">單獨, 狡猾, 異位面, 囤財者</span></h3>
+<p class="MonsterStats">Secret dagger (w[2d8] 傷害), 12 HP, 0 護甲</p>
+<p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterDescription">“Surely, my good man, you must know why I am here. Must know who I am. You said the words. You spilled the blood and followed the instructions almost to the letter. Your pronunciation was a bit off but that’s to be expected. I’ve come to give you what you’ve always wanted, friend. Glory, love, money? Paltry things when you’ve the vaults of hell to plumb. Don’t look so shocked, you knew what this was. You have but one thing we desire. Promise it to us, and the world shall be yours for the taking. Trust me.” <em>Instinct</em>: To bargain</p>
 <ul><li>Offer a deal with horrible consequences</li>
 <li>Plumb the vaults of hell for a bargaining chip</li>
 <li>Make a show of power</li></ul>
-<h3 class="MonsterName">巨靈 (Djinn)	<span class="Tags">Group, Large, Magical</span></h3>
-<p class="MonsterStats">Flame (d8+1 damage, ignores armor), 14 HP, 4 Armor</p>
-<p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
-<p class="MonsterQualities"><strong>Special Qualities:</strong> Made of flame</p>
+<h3 class="MonsterName">巨靈 (Djinn)	<span class="Tags">集團, 大型, 魔法</span></h3>
+<p class="MonsterStats">Flame (d8+1 傷害, 無視護甲), 14 HP, 4 護甲</p>
+<p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
+<p class="MonsterQualities"><strong>特性:</strong> Made of flame</p>
 <p class="MonsterDescription">“Stop rubbing that lamp, you idiot. I do not care what you have read, it will not grant you wishes. I brought you here to show you something real, something true. See this mural? It shows the ancient city. The true city that came before. They called it Majilis and it was made of brass by the spirits. They had golem servants and human lovers and, in that day, it was said you could trade them a year of your life for a favor. We are not here to gather treasure this night, fool, we are here to learn. The djinn still sometimes come to these places, and you must understand their history if you are to know how to behave. They are powerful and wicked and proud and you must know them if you hope to survive a summoning. Now, bring the lamp here and we will light it, it grows dark and these ruins are dangerous at night.” <em>Instinct</em>: To burn eternally</p>
 <ul><li>Grant power for a price</li>
 <li>Summon the forces of the City of Brass</li></ul>
-<h3 class="MonsterName">地獄獵犬 (Hell Hound)	<span class="Tags">Group, Planar, Organized</span></h3>
-<p class="MonsterStats">Fiery Bite (d8 damage), 10 HP, 1 Armor</p>
-<p class="MonsterStats"><span class="Tags">Close</span></p>
-<p class="MonsterQualities"><strong>Special Qualities:</strong> Hide of shadow</p>
+<h3 class="MonsterName">地獄獵犬 (Hell Hound)	<span class="Tags">集團, 異位面, 組織</span></h3>
+<p class="MonsterStats">Fiery Bite (d8 傷害), 10 HP, 1 護甲</p>
+<p class="MonsterStats"><span class="Tags">近身</span></p>
+<p class="MonsterQualities"><strong>特性:</strong> Hide of shadow</p>
 <p class="MonsterDescription">When one reneges on a deal, does not the debtor come for payment? Does the owed party not send someone to collect what is due? So too with the Powers Below. They only want what is theirs. A howling pack of shadows, flame and jagged bone, driven by the hunting horn. They will not cease, they cannot be evaded. <em>Instinct</em>: To pursue</p>
 <ul><li>Follow despite all obstacles</li>
 <li>Spew fire</li>
 <li>Summon the forces of hell on their target</li></ul>
-<h3 class="MonsterName">小惡魔 (Imp)	<span class="Tags">Horde, Planar, Intelligent, Organized</span></h3>
-<p class="MonsterStats">Flame gout (d6 damage, ignores armor), 7 HP, 1 Armor</p>
-<p class="MonsterStats"><span class="Tags">Close, Near, Far</span></p>
+<h3 class="MonsterName">小惡魔 (Imp)	<span class="Tags">成群, 異位面, 聰穎, 組織</span></h3>
+<p class="MonsterStats">Flame gout (d6 傷害, 無視護甲), 7 HP, 1 護甲</p>
+<p class="MonsterStats"><span class="Tags">近身, 短程, 遠程</span></p>
 <p class="MonsterDescription">These tiny observer-demons often act as a first-time binding subject by neophyte warlocks. They can be found infesting arcane cabals, drinking potions when no one watches, and chasing pets and servants with tiny pitchforks. A caricature of true demonhood, these little creatures are, thankfully, not too difficult to bind or extinguish. <em>Instinct</em>: To harass</p>
 <ul><li>Send information back to hell</li>
 <li>Cause mischief</li></ul>
-<h3 class="MonsterName">Inevitable	<span class="Tags">Group, Large, Magical, Cautious, Amorphous, Planar</span></h3>
-<p class="MonsterStats">Hammer (d10+1 damage), 21 HP, 5 Armor</p>
-<p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
-<p class="MonsterQualities"><strong>Special Qualities:</strong> Made of Order</p>
+<h3 class="MonsterName">Inevitable	<span class="Tags">集團, 大型, 魔法, 謹慎, 不定型, 異位面</span></h3>
+<p class="MonsterStats">Hammer (d10+1 傷害), 21 HP, 5 護甲</p>
+<p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
+<p class="MonsterQualities"><strong>特性:</strong> Made of Order</p>
 <p class="MonsterDescription">All things come to an end. Reality bleeds from the cut of entropy’s knife. At the edge of time itself stand the inevitable. Massive, powerful and seemingly carved from star-stuff themselves, the inevitable intervene only where magic or calamity have undone the skein of fate. Where the arrogant and powerful boil the substance of destiny away and seek to undermine the very laws of reality, the inevitable arrive to guide things back to the proper order. Unshakable, seemingly immune to mortal harm and utterly enigmatic, it is said that the Inevitable are all that will remain when time’s long thread has run out. <em>Instinct</em>: To preserve order</p>
 <ul><li>End a spell or effect</li>
 <li>Enforce a law of nature or man</li>
 <li>Give a glimpse of destiny</li></ul>
-<h3 class="MonsterName">墮魂蟲 (Larvae)	<span class="Tags">Horde, Devious, Planar, Intelligent</span></h3>
-<p class="MonsterStats">Slime (w[2d4] damage), 10 HP, 0 Armor</p>
-<p class="MonsterStats"><span class="Tags">Close</span></p>
+<h3 class="MonsterName">墮魂蟲 (Larvae)	<span class="Tags">成群, 狡猾, 異位面, 聰穎</span></h3>
+<p class="MonsterStats">Slime (w[2d4] 傷害), 10 HP, 0 護甲</p>
+<p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterDescription">Those who have seen visions of the Planes Below, and survived with their sanity intact, speak of masses of these writhing wretches. Maggots with the faces of men and women, crying out for salvation in a nest of flames. Sometimes, they can be goaded out through a rip in the planar caul and emerge, wriggling and in torment, into our world. Once here, they spread misery and sickness during their mayfly lives before expiring into a slurry of gore. All in all, an enticement to do good deeds in life. <em>Instinct</em>: To suffer</p>
 <ul><li>Fill them with despair</li>
 <li>Beg for mercy</li>
 <li>Draw evil attention</li></ul>
-<h3 class="MonsterName">夢魘 (Nightmare)	<span class="Tags">Horde, Large, Magical, Terrifying, Planar</span></h3>
-<p class="MonsterStats">Trample (d6+1 damage), 7 HP, 4 Armor</p>
-<p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
-<p class="MonsterQualities"><strong>Special Qualities:</strong> Flame and shadow</p>
+<h3 class="MonsterName">夢魘 (Nightmare)	<span class="Tags">成群, 大型, 魔法, 駭人, 異位面</span></h3>
+<p class="MonsterStats">Trample (d6+1 傷害), 7 HP, 4 護甲</p>
+<p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
+<p class="MonsterQualities"><strong>特性:</strong> Flame and shadow</p>
 <p class="MonsterDescription">The herd came from a pact made in the days when folk still inhabited the Blasted Steppes. Horselords, they were, who travelled those lands. Born in the saddle, it was said. One of theirs, in a bid to dominate his peers, made a black pact with some fell power and traded away his finest horses. He had some power, sure—but what’s a thousand year dynasty when a life is so short? Now the fiends of the pit ride on the finest horses ever seen. Coats of shining oil and manes of tormented flame: these are steeds of hell’s cavalry. <em>Instinct</em>: To ride rampant</p>
 <ul><li>Sheath a rider in hellish flame</li>
 <li>Drive them away</li></ul>
-<h3 class="MonsterName">夸塞魔 (Quasit)	<span class="Tags">Horde, Planar</span></h3>
-<p class="MonsterStats">Hellish weaponry (d6 damage), 7 HP, 2 Armor</p>
-<p class="MonsterStats"><span class="Tags">Close</span></p>
-<p class="MonsterQualities"><strong>Special Qualities:</strong> Adaptable form</p>
+<h3 class="MonsterName">夸塞魔 (Quasit)	<span class="Tags">成群, 異位面</span></h3>
+<p class="MonsterStats">Hellish weaponry (d6 傷害), 7 HP, 2 護甲</p>
+<p class="MonsterStats"><span class="Tags">近身</span></p>
+<p class="MonsterQualities"><strong>特性:</strong> Adaptable form</p>
 <p class="MonsterDescription">An imp with some ambition. A quasit is a kind of foot soldier in the demon realm. A commoner, armed with fangs or claws or wings or some other thing to give it just a little edge over its hellish peers. Commonly bound by warlocks to carry heavy loads or build bridges or guard their twisted towers, a quasit can take on many forms, none of them pleasant. <em>Instinct</em>: To serve</p>
 <ul><li>Attack with abandon</li>
 <li>Inflict pain</li></ul>
-<h3 class="MonsterName">泰拉斯奎巨獸 (The Tarrasque)	<span class="Tags">Solitary, Huge, Planar</span></h3>
-<p class="MonsterQualities"><strong>Special Qualities:</strong> Impervious</p>
+<h3 class="MonsterName">泰拉斯奎巨獸 (The Tarrasque)	<span class="Tags">單獨, 巨型, 異位面</span></h3>
+<p class="MonsterQualities"><strong>特性:</strong> Impervious</p>
 <p class="MonsterDescription">The Tarrasque. Legendary unstoppable juggernaut—eater of cities and swallower of ships, horses, and knights. A creature unseen in an age but about whom all kinds of stories are told. One thread of truth weaves through these stories. It cannot be killed. No blade can pierce its stony shell nor spell penetrate the shield it somehow bears. Stories say, though, that the will of one pure soul can send it to slumber, though what that means and, by the gods, where such a thing might be found, pray we do not ever need to learn. It slumbers. Somewhere in the periphery of the planar edge, it sleeps for now. <em>Instinct</em>: To consume</p>
 <ul><li>Swallow a person, group, or place whole</li>
 <li>Release a remnant of a long-eaten place from its gullet</li></ul>
-<h3 class="MonsterName">Word Demon	<span class="Tags">Solitary, Planar, Magical</span></h3>
+<h3 class="MonsterName">Word Demon	<span class="Tags">單獨, 異位面, 魔法</span></h3>
 <p class="MonsterDescription">All of mortal magic is just words. Spells are prayers, rote formula, runes cast, or songs sung. Letters, words, sentences, and syntax strung together in a language that the whole world itself might understand. By way of words we can make our fellows cry or exult, can paint pictures and whisper desire to the gods. No little wonder, then, that in all that power is intent. That every word we utter, if repeated and meaning or emotion given to it, can spark a kind of unintentional summoning. Word daemons are called by accident, appear at random and are often short-lived, but come to attend a particular word. Capricious, unpredictable and dangerous, yes—but possibly useful, depending on the word. <em>Instinct</em>: To further their word</p>
 <ul><li>Cast a spell related to their word</li>
 <li>Bring their word into abundance</li></ul>
